--- a/templates/common/header.ejs
+++ b/templates/common/header.ejs
@@ -1,1 +1,43 @@
-<h1>Headder</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+</head>
+<body style="height:1500px">
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <a class="navbar-brand" href="#"><%=  __('home') %></a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+     <!-- Dropdown -->
+     <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                <%=  __(clanguage) %>
+            </a>
+            <div class="dropdown-menu">
+  
+                <ul class="dropdown">
+                    <% languages.forEach(function(lang){ %>
+                    <li><a href="/change-lang/<%= lang %>"><%=  __(lang) %></a></li>
+                    <% })%>                                                                
+                </ul>
+            </div>
+          </li>
+  </ul>
+</nav>
+
+</body>
+</html>
+
+
