--- a/templates/layouts/home_layout.ejs
+++ b/templates/layouts/home_layout.ejs
@@ -26,7 +26,8 @@
     <section class="hero-area">
             <%- body %>
      </section>   
-    
+     <%-partial('../common/facebook-message-block')%>
+
 
 </body>
 
